Pequena introdução à lógica fuzzy

--- a/docs/article/wscad.bib
+++ b/docs/article/wscad.bib
@@ -1,134 +1,26 @@
-@book{edil:97,
-  author={Edil. S. T. Fernandes and Anna D. Santos},
-  title={Arquiteturas super-escalares: detecção e exploração do paralelismo de baixo nível},
-  publisher={Instituto de Informática da UFRGS},
-  address={Porto Alegre, Brasil},
-  year={1997}
+@article{zadeh:65,
+  title={Fuzzy sets},
+  author={Zadeh, Lotfi A},
+  journal={Information and control},
+  volume={8},
+  number={3},
+  pages={338--353},
+  year={1965},
+  publisher={World Scientific}
 }
 
-@MastersThesis{kornau:10,
-    author={Tim Kornau},
-    title={Return oriented programming for the ARM architecture},
-    school={Ruhr-Universitat Bochum},
-    address={Bochum, Germany},
-    pages={105},
-    year={2010}
+@book{klir:95,
+  title={Fuzzy sets and fuzzy logic},
+  author={Klir, George and Yuan, Bo},
+  volume={4},
+  year={1995},
+  publisher={Prentice Hall New Jersey}
 }
 
-@article{ryzhyk:06,
-  title={The ARM Architecture},
-  author={Ryzhyk, Leonid},
-  journal={University of New South Wales},
-  address={Sydney, Australia},
-  year={2006}
+@book{weber:03,
+  title={Aplica{\c{c}}{\~a}o da l{\'o}gica fuzzy em software e hardware},
+  author={Weber, Leo and Klein, Pedro Antonio Trierweiler},
+  year={2003},
+  publisher={Editora da ULBRA}
 }
-
-@book{knaggs:04,
-  author = {P. Knaggs and S. Welsh},
-  title = {ARM: Assembly Language Programming},
-  year = {2004},
-  address = {Bournemouth, England},
-  publisher = {School of Design, Engineering \& Computing, Bournemouth University}
-}
-
-@Other{armcenter:11,
-  title={ARM Information Center -- Condition code suffixes},
-  author={ARM},
-  year={2011},
-  note={Disponível em: <http://infocenter.arm.com/help/index.jsp?topic=/ com.arm.doc.dui0473c/CEGBHJCJ.html>. Acesso em: julho de 2015.}
-}
-
-@inproceedings{gonzalez:99,
-  author={Antonio Gonzalez and Jonathan Tubella and Carlos Molina},
-  title={Trace-level reuse},
-  booktitle={1999 International Conference on Parallel Processing},
-  pages={30--37},
-  year={1999},
-  publisher={Kazimierz Dolny, Poland: IEEE},
-  organization={IEEE}
-}
-
-@article{pilla:07,
-  title={Limits for a feasible speculative trace reuse implementation},
-  author={Pilla, Mauricio L. and Childers, Bruce R. and Franca, Felipe M. G. and Da Costa, Amarildo T.},
-  journal={International Journal of High Performance Systems Architecture},
-  volume={1},
-  number={1},
-  pages={69--76},
-  year={2007},
-  address={Genève, Switzerland},
-  publisher={Inderscience}
-}
-
-@inproceedings{huang:00,
-  title={Exploring Sub-Block Value Reuse for Superscalar Processors},
-  author={Jian Huang and David J. Lilja},
-  booktitle={2000 International Conference on Parallel Architectures and Compilation Techniques (Pact'00) October 15 - 19},
-  pages={100 -- 107},
-  year={2001},
-  publisher={Philadelphia, PA, USA: IEEE}
-}
-
-@Book{mudge:01,
-  title={Sim-Panalyzer 2.0 Reference Manual},
-  author={Mudge, Trevor and Austin, Todd and Grunwald, Dan},
-  year={2001},
-  publisher={EECS -- University of Michigan},
-  address={Ann Arbor, MI, USA}
-}
-
-@other{sp:01,
-  author = {Trevor Mudge and Todd Austin and Dirk Grunwald},
-  title = {The SimpleScalar-Arm Power Modeling Project},
-  year = {2001},
-  note = {Disponível em: <https://github.com/bonzini/simplesim-arm>. Acesso em: julho de 2015.}
-}
-
-@other{mibench:01,
-  author =   {Matthew Guthaus and Julius Ringenberg and Todd Austin and Trevor Mudge and Richard Brown},
-  title =    {MiBench Version 1.0},
-  year =   {2001},
-  note =   {Disponível em <http://www.eecs.umich.edu/mibench/>. Acesso em: julho de 2015.}
-}
-
-@inproceedings{guthaus:01,
-  title={Mibench: A free, commercially representative embedded benchmark suite. In Workload Characterization},
-  author={Guthaus, Matthew and Ringenberg, John and Ernst, Dan and Austin, Todd and Mudge, Trevor and Brown, Richard},
-  booktitle={2001. WWC-4. 2001 IEEE International Workshop on},
-  pages={3--14},
-  year={2001},
-  publisher={Austin, Texas: IEEE}
-}
-
-@article{rahimi:13,
-  title={Spatial memoization: Concurrent instruction reuse to correct timing errors in SIMD architectures},
-  author={Rahimi, Azar and Benini, Luca and Gupta, Rajesh K},
-  journal={Circuits and Systems II: Express Briefs, IEEE Transactions on},
-  volume={60},
-  number={12},
-  pages={847--851},
-  year={2013},
-  publisher={IEEE}
-}
-
-@article{tsai:11,
-  added-at = {2011-08-08T00:00:00.000+0200},
-  author = {Tsai, Yi-Ying and Chen, Chung-Ho},
-  biburl = {http://www.bibsonomy.org/bibtex/2ea2421e35985e8dacda88a754643bccf/dblp},
-  ee = {http://dx.doi.org/10.1109/TVLSI.2010.2055908},
-  interhash = {313bddc9666a6e6b372c94bb5b05f392},
-  intrahash = {ea2421e35985e8dacda88a754643bccf},
-  journal = {IEEE Trans. VLSI Syst.},
-  keywords = {dblp},
-  number = 9,
-  pages = {1681-1694},
-  timestamp = {2011-08-08T00:00:00.000+0200},
-  title = {Energy-Efficient Trace Reuse Cache for Embedded Processors},
-  url = {http://dblp.uni-trier.de/db/journals/tvlsi/tvlsi19.html#TsaiC11},
-  volume = 19,
-  year = 2011
-}
-
-
-
 
