--- a/docs/article/wscad.tex
+++ b/docs/article/wscad.tex
@@ -43,8 +43,12 @@ Resumo aqui.
 
 \section{Introdução}
 
-\section*{Bibliografia}
+% Logica fuzzy: colocar onde? %
 
+\subsection{Lógica fuzzy}
+
+	Existem diversos casos onde classes de objetos não pertencem totalmente a um conjunto. Baseado nisto, Zadeh definiu a teoria dos conjuntos \textit{fuzzy}~\cite{zadeh:65}, o que visa tratar problemas de imprecisão ao classificar dados no mundo real. Com isto, tem-se a base da lógica \textit{fuzzy}, a qual é aplicada em sistemas de controle e de suporte à decisão, onde a descrição do problema não é feita de forma precisa~\cite{weber:03}.
+	
 \bibliographystyle{sbc}
 \bibliography{wscad}
 
