Descrição completa sobre lógica fuzzy, a princípio

--- a/docs/article/wscad.bib
+++ b/docs/article/wscad.bib
@@ -24,3 +24,12 @@
   publisher={Editora da ULBRA}
 }
 
+@article{tanscheit:04,
+  title={Sistemas fuzzy},
+  author={Tanscheit, Ricardo},
+  journal={Intelig{\^e}ncia computacional: aplicadaa administra{\c{c}}ao, economia e engenharia em Matlab},
+  pages={229--264},
+  year={2004}
+}
+
+
