--- a/docs/article/wscad.tex
+++ b/docs/article/wscad.tex
@@ -47,7 +47,9 @@ Resumo aqui.
 
 \subsection{Lógica fuzzy}
 
-	Existem diversos casos onde classes de objetos não pertencem totalmente a um conjunto. Baseado nisto, Zadeh definiu a teoria dos conjuntos \textit{fuzzy}~\cite{zadeh:65}, o que visa tratar problemas de imprecisão ao classificar dados no mundo real. Com isto, tem-se a base da lógica \textit{fuzzy}, a qual é aplicada em sistemas de controle e de suporte à decisão, onde a descrição do problema não é feita de forma precisa~\cite{weber:03}.
+	Existem diversos casos onde classes de objetos não pertencem totalmente a um conjunto. Baseado nisto, Zadeh definiu a teoria dos conjuntos \textit{fuzzy}~\cite{zadeh:65}, o que visa tratar problemas de imprecisão ao classificar dados no mundo real. Os conjuntos \textit{fuzzy} possuem aplicações em sistemas de controle e de suporte à decisão, onde a descrição do problema não é feita de forma precisa~\cite{weber:03}.
+	
+	Utilizando-se dos conjuntos \textit{fuzzy}, tem-se a base para a lógica \textit{fuzzy}, sendo construído a partir da lógica proposicional. Com isto, os operadores foram definidos à partir dos já estabelecidos na lógica clássica, com a adição de outros para fins práticos~\cite{tanscheit:04}. Uma característica interessante que diferencia a lógica tradicional da \textit{fuzzy} é que na primeira os valores que são utilizados atendem a condição de serem verdadeiros ou falsos (0 ou 1). Já na segunda, trabalha-se com conjuntos \textit{fuzzy} -- estes podem assumir um valor que pertence ao intervalo $[0, 1]$, o que permite que um conjunto \textit{fuzzy} possa ser representado por uma infinidade de valores~\cite{klir:95}.	
 	
 \bibliographystyle{sbc}
 \bibliography{wscad}
