Descrição sobre GPU e objetivo do trabalho

--- a/docs/article/wscad.bib
+++ b/docs/article/wscad.bib
@@ -32,4 +32,26 @@
   year={2004}
 }
 
+@inproceedings{sengupta:07,
+  title={Scan primitives for GPU computing},
+  author={Sengupta, Shubhabrata and Harris, Mark and Zhang, Yao and Owens, John D},
+  booktitle={Graphics hardware},
+  volume={2007},
+  pages={97--106},
+  year={2007}
+}
+
+@article{owens:08,
+  title={GPU computing},
+  author={Owens, John D and Houston, Mike and Luebke, David and Green, Simon and Stone, John E and Phillips, James C},
+  journal={Proceedings of the IEEE},
+  volume={96},
+  number={5},
+  pages={879--899},
+  year={2008},
+  publisher={IEEE}
+}
+
+
+
 
