GPUFuzzy + falta referência NVIDIA

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -52,6 +52,9 @@
   publisher={IEEE}
 }
 
-
-
-
+@other{nvidia:15,
+	title={Site do NVIDIA},
+	author={NVIDIA},
+	note={Dispon{\'i}vel em: <http://>},
+	year={2015}
+}
