Referência ao FuzzyGPU, precisa descrevê-lo melhor

--- a/article/wscad.tex
+++ b/article/wscad.tex
@@ -59,6 +59,10 @@ de dez minutos para três segundos. Outro exemplo relevante é o ganho de perfor
 
 	Tendo estes conceitos discutidos, o objetivo deste trabalho é descrever uma biblioteca de lógica \textit{fuzzy} voltada para GPUs, a fim de verificar como pode ser efetuado uma implementação que consiga extrair paralelismo deste tipo de arquiteturas.
 	
+\section{Trabalhos Relacionados}
+
+	Existem diversas implementações relacionadas à lógica \textit{fuzzy}. Um trabalho relacionado ao escopo deste fez uma implementação de uma biblioteca aritmética para GPUs, chamada de FuzzyGPU~\cite{defour:14}.
+	
 \bibliographystyle{sbc}
 \bibliography{wscad}
 
