--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -58,3 +58,12 @@
 	note={Dispon{\'i}vel em: <http://>},
 	year={2015}
 }
+
+@inproceedings{defour:14,
+  title={Fuzzygpu: a fuzzy arithmetic library for gpu},
+  author={Defour, David and Marin, Mario},
+  booktitle={Parallel, Distributed and Network-Based Processing (PDP), 2014 22nd Euromicro International Conference on},
+  pages={624--631},
+  year={2014},
+  organization={IEEE}
+}
