Parte de trabalhos relacionados desenvolvidos, adicionandas várias referências

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -53,12 +53,11 @@
 }
 
 @other{nvidia:15,
-	title={Site do NVIDIA},
+	title={Plataforma de Computação Paralela | CUDA | NVIDIA | NVIDIA},
 	author={NVIDIA},
-	note={Dispon{\'i}vel em: <http://>},
+	note={Dispon{\'i}vel em: <http://www.nvidia.com.br/object/cuda\_home\_new\_br.html>},
 	year={2015}
 }
-
 @inproceedings{defour:14,
   title={Fuzzygpu: a fuzzy arithmetic library for gpu},
   author={Defour, David and Marin, Mario},
@@ -67,3 +66,56 @@
   year={2014},
   organization={IEEE}
 }
+
+@article{sugeno:93,
+  title={A fuzzy-logic-based approach to qualitative modeling},
+  author={Sugeno, Michio and Yasukawa, Takahiro},
+  journal={IEEE Transactions on fuzzy systems},
+  volume={1},
+  number={1},
+  pages={7--31},
+  year={1993}
+}
+
+@inproceedings{cingolani:12,
+  title={jFuzzyLogic: a robust and flexible Fuzzy-Logic inference system language implementation},
+  author={Cingolani, Pablo and Alcala-Fdez, Jesus},
+  booktitle={FUZZ-IEEE},
+  pages={1--8},
+  year={2012},
+  organization={Citeseer}
+}
+
+@article{cingolani:13,
+  title={jFuzzyLogic: a java library to design fuzzy logic controllers according to the standard for fuzzy control programming},
+  author={Cingolani, Pablo and Alcal{\'a}-Fdez, Jes{\'u}s},
+  journal={International Journal of Computational Intelligence Systems},
+  volume={6},
+  number={1},
+  pages={61--75},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{li:11,
+  title={Energy and battery management of a plug-in series hybrid electric vehicle using fuzzy logic},
+  author={Li, Siguang G and Sharkh, SM and Walsh, Frank C and Zhang, Cheng-Ning},
+  journal={Vehicular Technology, IEEE Transactions on},
+  volume={60},
+  number={8},
+  pages={3571--3585},
+  year={2011},
+  publisher={IEEE}
+}
+
+@incollection{kwow:02,
+  title={Parallel fuzzy c-means clustering for large data sets},
+  author={Kwok, Terence and Smith, Kate and Lozano, Sebasti{\'a}n and Taniar, David},
+  booktitle={Euro-Par 2002 Parallel Processing},
+  pages={365--374},
+  year={2002},
+  publisher={Springer}
+}
+
+
