--- a/article/wscad.tex
+++ b/article/wscad.tex
@@ -27,6 +27,8 @@ Pelotas, RS - Brasil\\
 
 \begin{document}
 
+\newcommand{\libname}{CudaFuzzy}
+
 \maketitle
 
 \begin{abstract}
@@ -42,6 +44,7 @@ Resumo aqui.
 \end{resumo}
 
 \section{Introdução}
+\label{sec:introducao}
 
 % Logica fuzzy: colocar onde? %
 
@@ -53,16 +56,35 @@ Resumo aqui.
 
 	A fim de obter-se computação com bom desempenho, é importante fazer uso dos vários núcleos de processamento os quais são disponibilizados nos sistemas de computação atuais -- para poder por em prática o uso do paralelismo. Neste contexto, encaixam-se as GPUs (\textit{Graphical Processor Units}), as quais são componentes com alto poder de paralelismo~\cite{sengupta:07}. Porém, é importante ressaltar que as GPUs são reservadas a obter bom desempenho com aplicações que possuem determinadas características~\cite{owens:08} que incluem: (i) Requisitos computacionais grandes, (ii) Paralelismo nas aplicações e (iii) maior importância ao \textit{throughput} do que a latência. Destacam-se alguns exemplos práticos bem-sucedidos que utilizam CUDA:
 Análise do fluxo de tráfego aéreo, através do uso do poder computacional de CUDA, foi possível reduzir o tempo de análise do tráfego aéreo nacional
-de dez minutos para três segundos. Outro exemplo relevante é o ganho de performace em simulações moleculares NAMD(dinâmica molecular em nanoescala), o ganho de performace foi possível graças as arquiteturas paralelas das GPUs~\cite{nvidia:15}.
+de dez minutos para três segundos. Outro exemplo relevante é o ganho de desempenho em simulações moleculares NAMD(dinâmica molecular em nanoescala), o ganho de desempenho foi possível graças as arquiteturas paralelas das GPUs~\cite{nvidia:15}.
 
-% O trabalho - Acredito que deverá ser melhor explorado esta parte! %	
+% O trabalho - Acredito que deverá ser melhor explorado esta parte! Quando os objetivos ficarem mais claros %	
 
 	Tendo estes conceitos discutidos, o objetivo deste trabalho é descrever uma biblioteca de lógica \textit{fuzzy} voltada para GPUs, a fim de verificar como pode ser efetuado uma implementação que consiga extrair paralelismo deste tipo de arquiteturas.
 	
-\section{Trabalhos Relacionados}
+% Discussão sobre a estrutura do artigo.
 
-	Existem diversas implementações relacionadas à lógica \textit{fuzzy}. Um trabalho relacionado ao escopo deste fez uma implementação de uma biblioteca aritmética para GPUs, chamada de FuzzyGPU~\cite{defour:14}.
+	O restante deste artigo está dividido da seguinte maneira: Na seção~\ref{sec:lib}, é descrito a implementação efetuada da biblioteca~\libname. A seção~\ref{sec:metodologia} destina-se a explicar a metodologia empregada para a execução de testes na biblioteca. A seção~\ref{sec:resultados} exibe e discute os principais resultados obtidos por este trabalho, de onde se tiram as principais conclusões, observadas na seção~\ref{sec:conclusoes}, a qual ainda mostra possíveis trabalhos futuros. Por fim, a seção~\ref{sec:trabalhos} faz uma breve discussão sobre os trabalhos relacionados ao escopo deste artigo.
 	
+\section{\libname}
+\label{sec:lib}
+
+\section{Metodologia}
+\label{sec:metodologia}	
+
+\section{Resultados e Discussão}	
+\label{sec:resultados}	
+
+\section{Conclusões e Trabalhos Futuros}
+\label{sec:conclusoes}	
+	
+\section{Trabalhos Relacionados}
+\label{sec:trabalhos}
+
+	Existem diversas implementações relacionadas à lógica \textit{fuzzy}. Os artigos visualizados na bibliografia normalmente fazem utilização de lógica \textit{fuzzy} voltada para um tipo de problema, não descrevendo uma biblioteca genérica. Como trabalhos descritos desta forma, existe~\cite{sugeno:93}, utiliza-se lógica \textit{fuzzy} para a discussão de um metódo para modelagem qualitativa. Em~\cite{li:11}, é empregada a lógica \textit{fuzzy} para fazer o gerenciamento de energia e bateria de automóveis híbridos do tipo \textit{plug-in}.
+	
+	Como bibliotecas relacionadas à lógica \textit{fuzzy}, existe uma desenvolvida na linguagem Java, chamada de jFuzzyLogic~\cite{cingolani:12, cingolani:13}. Esta biblioteca é uma implementação de sistemas \textit{fuzzy} que permite projetar controladores de lógica \textit{fuzzy}. Por fim, existe a biblioteca FuzzyGPU~\cite{defour:14}, a qual é o trabalho relacionado mais próximo ao que este artigo apresenta. FuzzyGPU é uma implementação de biblioteca de aritmética \textit{fuzzy} voltada à GPUs.
+ 	
 \bibliographystyle{sbc}
 \bibliography{wscad}
 
