Seção de lógica fuzzy e descrição do que tem que fazer lá

--- a/article/wscad.tex
+++ b/article/wscad.tex
@@ -64,8 +64,14 @@ de dez minutos para três segundos. Outro exemplo relevante é o ganho de desemp
 	
 % Discussão sobre a estrutura do artigo.
 
-	O restante deste artigo está dividido da seguinte maneira: Na seção~\ref{sec:lib}, é descrito a implementação efetuada da biblioteca~\libname. A seção~\ref{sec:metodologia} destina-se a explicar a metodologia empregada para a execução de testes na biblioteca. A seção~\ref{sec:resultados} exibe e discute os principais resultados obtidos por este trabalho, de onde se tiram as principais conclusões, observadas na seção~\ref{sec:conclusoes}, a qual ainda mostra possíveis trabalhos futuros. Por fim, a seção~\ref{sec:trabalhos} faz uma breve discussão sobre os trabalhos relacionados ao escopo deste artigo.
-	
+	O restante deste artigo está dividido da seguinte maneira: A seção~\ref{sec:logfuzzy} fala sobre a lógica fuzzy, que é a base para a construção deste trabalho. Na seção~\ref{sec:lib}, é descrito a implementação efetuada da biblioteca~\libname. A seção~\ref{sec:metodologia} destina-se a explicar a metodologia empregada para a execução de testes na biblioteca. A seção~\ref{sec:resultados} exibe e discute os principais resultados obtidos por este trabalho, de onde se tiram as principais conclusões, observadas na seção~\ref{sec:conclusoes}, a qual ainda mostra possíveis trabalhos futuros. Por fim, a seção~\ref{sec:trabalhos} faz uma breve discussão sobre os trabalhos relacionados ao escopo deste artigo.
+
+\section{Lógica Fuzzy}
+\label{sec:logfuzzy}
+
+% Descrição breve, pra que serve, exemplos
+% Explicação dos operadores mais comuns (talvez fazer uma correlação com a lógica proposicional / lógica comum)
+
 \section{\libname}
 \label{sec:lib}
 
