--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -58,6 +58,12 @@
 	note={Dispon{\'i}vel em: <http://www.nvidia.com.br/object/cuda\_home\_new\_br.html>},
 	year={2015}
 }
+@other{arruda:16,
+	title={Projetos com Lógica Fuzzy},
+	author={Arruda},
+	note={Dispon{\'i}vel em: <http://http://www.arruda.blog.br/programacao/java/i/},
+	year={2011}
+}
 @inproceedings{defour:14,
   title={Fuzzygpu: a fuzzy arithmetic library for gpu},
   author={Defour, David and Marin, Mario},
@@ -116,6 +122,13 @@
   pages={365--374},
   year={2002},
   publisher={Springer}
+}
+
+@article{falcao2002conjuntos,
+  title={Conjuntos, l{\'o}gica e sistemas fuzzy},
+  author={Falc{\~a}o, Djalma M},
+  journal={COPPE/UFRJ},
+  year={2002}
 }
 
 
