Descrição do CudaFuzzy

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -131,4 +131,13 @@
   year={2002}
 }
 
+@article{keckler:11,
+  title={GPUs and the future of parallel computing},
+  author={Keckler, Stephen W and Dally, William J and Khailany, Brucek and Garland, Michael and Glasco, David},
+  journal={IEEE Micro},
+  number={5},
+  pages={7--17},
+  year={2011},
+  publisher={IEEE}
+}
 
