Mudança na seção de lógica fuzzy

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -124,7 +124,7 @@
   publisher={Springer}
 }
 
-@article{falcao2002conjuntos,
+@article{falcao:02,
   title={Conjuntos, l{\'o}gica e sistemas fuzzy},
   author={Falc{\~a}o, Djalma M},
   journal={COPPE/UFRJ},
@@ -140,4 +140,16 @@
   year={2011},
   publisher={IEEE}
 }
+
+@article{boclin:06,
+  title={A decision support method for environmental impact assessment using a fuzzy logic approach},
+  author={Boclin, Andr{\'e} de Siqueira Campos and de Mello, Renato},
+  journal={Ecological economics},
+  volume={58},
+  number={1},
+  pages={170--181},
+  year={2006},
+  publisher={Elsevier}
+}
+
 
