Atualizando Referência da seção operadores fuzzy

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -152,4 +152,13 @@
   publisher={Elsevier}
 }
 
+@article{gao2009multiplication,
+  title={Multiplication operation on fuzzy numbers},
+  author={Gao, Shang and Zhang, Zaiyue and Cao, Cungen},
+  journal={Journal of Software},
+  volume={4},
+  number={4},
+  pages={331--338},
+  year={2009}
+}
 
