Refiz as alterações do Renan
Refiz as alterações do Renan que estavam ocorrendo no mesmo arquivo em que eu estava mexendo. Como era apenas um parágrafo, e eu havia alterado praticamente todo o texto novamente, preferi refazer.

--- a/article/wscad.tex
+++ b/article/wscad.tex
@@ -90,7 +90,18 @@ Os mais comuns em conjuntos \textit{fuzzy} sÃ£o: união
 (A\begin{math} \cup \end{math} B ={ x | x \begin{math}\in \end{math} A \begin{math}\vee \end{math} x \begin{math}\in \end{math} B) e intersecção (A \begin{math} \cap \end{math} B = 
 x | x \begin{math}\in \end{math}A \begin{math}\wedge \end{math} x \begin{math}\in \end{math} B).  
 
-%={x | x âˆˆ A âˆ§ x âˆˆ B}). 
+Além dos operadores em conjuntos, os operadores aritméticos são fundamentais para a matemática fuzzy. Os operadores adição e subtração são mais fáceis de manipular, já os procedimentos de multiplicação e divisão são mais complexos. Novamente utilizando como exemplo dois conjuntos A e B, as principais operações aritméticas são:
+
+Adição - 
+\begin{math} [{a_1},{a_3}] (+) [{b_1},{b_3}]= [{a_1 + b_1,a_3 + b_3}]  \end{math}
+
+Subtração - \begin{math} [{a_1},{a_3}] (-) [{b_1},{b_3}] = [{a_1 - b_1,a_3 - b_3}]  \end{math}
+
+Multiplicação - 
+\begin{math} [{a_1},{a_3}] (\bullet) [{b_1},{b_3}]= [{a_1 \bullet b_1,a_3 \bullet b_3}]  \end{math}
+
+Divisão - 
+\begin{math} [{a_1},{a_3}] (/) [{b_1},{b_3}]= [{a_1 / b_1,a_3 / b_3}]  \end{math} 
 
 
 
