Referência da arquitetura SIMT, breve explicação no artigo

--- a/article/wscad.bib
+++ b/article/wscad.bib
@@ -162,3 +162,10 @@
   year={2009}
 }
 
+@article{lain:12,
+  title={A Quantitative Method To Data Reuse Patterns of SIMT Applications},
+  author={Lai, Bo-Cheng and Platero, Luis and Kuo, Hsien-Kai},
+  publisher={IEEE}
+}
+
+
